--- a/src/views/IngresosView.fxml
+++ b/src/views/IngresosView.fxml
@@ -1,14 +1,182 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXDatePicker?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import java.net.URL?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="controllers.IngresosController">
+<AnchorPane id="AnchorPane" prefHeight="931.0" prefWidth="1356.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.IngresosController">
     <stylesheets>
         <URL value="@/css/style.css" />
     </stylesheets>
    <children>
-      <Label layoutX="429.0" layoutY="107.0" text="Estas en ingresos" />
+      <BorderPane prefHeight="931.0" prefWidth="1356.0">
+         <top>
+            <Pane prefHeight="217.0" prefWidth="1356.0" BorderPane.alignment="CENTER">
+               <children>
+                  <VBox prefHeight="215.0" prefWidth="1356.0">
+                     <children>
+                        <HBox alignment="TOP_RIGHT" prefHeight="71.0" prefWidth="575.0">
+                           <children>
+                              <Label prefHeight="71.0" prefWidth="486.0" text="Ingresos">
+                                 <font>
+                                    <Font name="System Bold" size="39.0" />
+                                 </font>
+                              </Label>
+                              <HBox prefHeight="71.0" prefWidth="215.0">
+                                 <children>
+                                    <Label prefHeight="71.0" prefWidth="70.0" text="Total">
+                                       <font>
+                                          <Font size="23.0" />
+                                       </font>
+                                    </Label>
+                                    <Label prefHeight="71.0" prefWidth="122.0" text="£ 11.998" wrapText="true">
+                                       <font>
+                                          <Font name="System Bold" size="23.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="144.0" prefWidth="1264.0">
+                           <children>
+                              <Pane prefHeight="144.0" prefWidth="751.0">
+                                 <children>
+                                    <VBox alignment="CENTER" prefHeight="144.0" prefWidth="736.0">
+                                       <children>
+                                          <Label prefHeight="25.0" prefWidth="612.0" text="Fijos">
+                                             <font>
+                                                <Font name="System Bold" size="25.0" />
+                                             </font>
+                                          </Label>
+                                          <HBox alignment="CENTER" prefHeight="65.0" prefWidth="656.0" spacing="10.0">
+                                             <children>
+                                                <JFXDatePicker fx:id="dp_FechaDel" defaultColor="#0e95f5" nodeOrientation="LEFT_TO_RIGHT" prefHeight="26.0" prefWidth="114.0" promptText="Del" />
+                                                <JFXDatePicker fx:id="dp_FechaAl" prefHeight="26.0" prefWidth="114.0" promptText="Al" />
+                                                <JFXComboBox fx:id="cb_Persona" prefHeight="26.0" prefWidth="144.0" promptText="Persona" />
+                                                <JFXDatePicker fx:id="dp_FechaIngreso" prefHeight="26.0" prefWidth="154.0" promptText="Fecha Ingreso" />
+                                                <JFXTextField fx:id="txt_CantidadFija" prefHeight="26.0" prefWidth="97.0" promptText="Cantidad" />
+                                             </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER_RIGHT" prefHeight="71.0" prefWidth="234.0">
+                                             <children>
+                                                <HBox alignment="CENTER_RIGHT" prefHeight="60.0" prefWidth="737.0" spacing="425.0">
+                                                   <children>
+                                                      <Button fx:id="btn_GuardarFijo" alignment="CENTER" mnemonicParsing="false" prefHeight="31.0" prefWidth="96.0" text="Guardar" />
+                                                      <HBox alignment="CENTER_RIGHT" prefHeight="44.0" prefWidth="186.0">
+                                                         <children>
+                                                            <Label prefHeight="29.0" prefWidth="62.0" text="Total">
+                                                               <font>
+                                                                  <Font size="23.0" />
+                                                               </font>
+                                                            </Label>
+                                                            <Label fx:id="lb_TotalFijos" prefHeight="29.0" prefWidth="124.0" text="£ 5.621" wrapText="true">
+                                                               <font>
+                                                                  <Font name="System Bold" size="23.0" />
+                                                               </font>
+                                                            </Label>
+                                                         </children>
+                                                      </HBox>
+                                                   </children>
+                                                </HBox>
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </Pane>
+                              <Pane layoutX="10.0" layoutY="10.0" prefHeight="110.0" prefWidth="632.0">
+                                 <children>
+                                    <VBox alignment="CENTER" layoutX="-1.0" prefHeight="144.0" prefWidth="620.0">
+                                       <children>
+                                          <Label prefHeight="30.0" prefWidth="530.0" text="Otros">
+                                             <font>
+                                                <Font name="System Bold" size="25.0" />
+                                             </font>
+                                          </Label>
+                                          <HBox alignment="CENTER" prefHeight="65.0" prefWidth="632.0" spacing="60.0">
+                                             <children>
+                                                <JFXComboBox fx:id="cb_Concepto" prefHeight="26.0" prefWidth="207.0" promptText="Concepto" />
+                                                <JFXTextField fx:id="txt_OtraCantidad" prefHeight="26.0" prefWidth="120.0" promptText="Cantidad" />
+                                                <JFXDatePicker fx:id="dp_FechaOtroIngreso" prefHeight="26.0" prefWidth="150.0" promptText="Fecha Pago" />
+                                             </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER_RIGHT" prefHeight="71.0" prefWidth="234.0">
+                                             <children>
+                                                <HBox alignment="CENTER_RIGHT" prefHeight="60.0" prefWidth="620.0" spacing="320.0">
+                                                   <children>
+                                                      <Button alignment="CENTER" mnemonicParsing="false" prefHeight="31.0" prefWidth="96.0" text="Guardar" />
+                                                      <HBox alignment="CENTER_RIGHT">
+                                                         <children>
+                                                            <Label prefHeight="24.0" prefWidth="70.0" text="Total">
+                                                               <font>
+                                                                  <Font size="23.0" />
+                                                               </font>
+                                                            </Label>
+                                                            <Label prefHeight="29.0" prefWidth="118.0" text="£ 2.345" wrapText="true">
+                                                               <font>
+                                                                  <Font name="System Bold" size="23.0" />
+                                                               </font>
+                                                            </Label>
+                                                         </children>
+                                                      </HBox>
+                                                   </children>
+                                                </HBox>
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </Pane>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </children>
+            </Pane>
+         </top>
+         <left>
+            <Pane prefHeight="729.0" prefWidth="727.0" BorderPane.alignment="CENTER">
+               <children>
+                  <TableView fx:id="tabla_IngresoFijo" layoutX="2.0" prefHeight="729.0" prefWidth="725.0">
+                    <columns>
+                      <TableColumn fx:id="tc_idFijos" prefWidth="75.0" text="Id" />
+                      <TableColumn fx:id="tc_MesFijos" prefWidth="91.0" text="Mes" />
+                        <TableColumn fx:id="tc_FechaFijos" prefWidth="111.0" text="Fecha" />
+                        <TableColumn fx:id="tc_PersonaFijos" prefWidth="100.0" text="Persona" />
+                        <TableColumn fx:id="tc_FechaIngresoFijos" prefWidth="121.0" text="Fecha Ingreso" />
+                        <TableColumn fx:id="tc_CantidadFijos" prefWidth="124.0" text="Cantidad" />
+                        <TableColumn fx:id="tc_AccionFijos" prefWidth="105.0" text="Accion" />
+                    </columns>
+                  </TableView>
+               </children>
+            </Pane>
+         </left>
+         <right>
+            <Pane prefHeight="729.0" prefWidth="626.0" BorderPane.alignment="CENTER">
+               <children>
+                  <TableView fx:id="tabla_OtrosIngreso" prefHeight="729.0" prefWidth="624.0">
+                     <columns>
+                        <TableColumn prefWidth="67.0" text="Id" />
+                        <TableColumn prefWidth="106.0" text="Mes" />
+                        <TableColumn prefWidth="150.0" text="Concepto" />
+                        <TableColumn prefWidth="98.0" text="Fecha" />
+                        <TableColumn minWidth="0.0" prefWidth="95.0" text="Cantidad" />
+                        <TableColumn prefWidth="109.0" text="Accion" />
+                     </columns>
+                  </TableView>
+               </children></Pane>
+         </right></BorderPane>
    </children>
 </AnchorPane>
